feat: finish migration of features and tasks, archivation and configurations from spring to golang.
